# bacula

./: .cvsignore  .gitignore  .hgtags  AUTHORS  ChangeLog  CheckList  INSTALL  LICENSE  Makefile.in  Patchnotes  Patchnotes-2.4  Patchnotes-2.5  README  ReleaseNotes  VERIFYING  bacula-dir  bacula_3.0.2.orig.tar.gz.delta  bacula_3.0.2.orig.tar.gz.id  bacula_3.0.3.orig.tar.gz.delta  bacula_3.0.3.orig.tar.gz.id  bacula_5.0.0.orig.tar.gz.delta  bacula_5.0.0.orig.tar.gz.id  bacula_5.0.1.orig.tar.gz.delta  bacula_5.0.1.orig.tar.gz.id  bacula_5.0.2.orig.tar.gz.delta  bacula_5.0.2.orig.tar.gz.id  bacula_5.0.3.orig.tar.gz.delta  bacula_5.0.3.orig.tar.gz.id  bacula_5.2.3.orig.tar.gz.delta  bacula_5.2.3.orig.tar.gz.id  bacula_5.2.4.orig.tar.gz.delta  bacula_5.2.4.orig.tar.gz.id  config.status.lineno  configure  kernstodo  kes-1.38  projects  projects.old  release-3-status.txt  technotes  (+4 more)
autoconf/: .cvsignore  Make.common.in  acconfig.h  aclocal.m4  config.guess  config.h.in  config.h.in.save  configure.in  randpass
debian/: Makefile  NEWS  RATIONALE  README.Debian  TODO  bacula-common-mysql.install  bacula-common-mysql.links  bacula-common-mysql.shlibs  bacula-common-pgsql.install  bacula-common-pgsql.links  bacula-common-sqlite3.install  bacula-common-sqlite3.links  bacula-common-sqlite3.shlibs  bacula-common.dirs  bacula-common.docs  bacula-common.install  (+112 more)
src/: c  (+16 more)
src/gnome-console/: Makefile.am  Makefile.in  authenticate.c  callbacks.c  callbacks.h  console.c  console.glade  console.h  console_conf.c  console_conf.h  gnome-console.conf.in  interface.c  interface.h  support.h
(+1664 files in other folders)
